rework frontend and backend structure

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "wait-on": "^9.0.3"
   }
 }
