--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "mongodb": "^7.0.0"
+    "@tailwindcss/vite": "^4.1.17",
+    "mongodb": "^7.0.0",
+    "tailwindcss": "^4.1.17"
   }
 }
